--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ListViews"
         tools:targetApi="31">
+
+
         <activity
-            android:name=".UserActivity"
+            android:name=".Lists.SecondScreen"
             android:exported="false" />
+
+
         <activity
-            android:name=".MainActivity"
+            android:name=".Lists.UserActivity"
+            android:exported="false" />
+
+
+        <activity
+            android:name=".Lists.MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
