--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,27 +12,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ListViews"
         tools:targetApi="31">
+        <activity
+            android:name=".WorkManager.MainActivityWM"
+            android:exported="true">
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+
+        </activity>
 
         <activity
             android:name=".Lists.SecondScreen"
             android:exported="false" />
-
-
         <activity
             android:name=".Lists.UserActivity"
             android:exported="false" />
 
-
         <activity
             android:name=".Lists.MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
